Fixed some spacing. Probably should get rid of slideshow

--- a/src/styles/Creations.css
+++ b/src/styles/Creations.css
@@ -3,6 +3,7 @@
   padding: 30px;
   display: flex;
   flex-direction: column;
+  margin: auto;
   
 }
 
